# soma-curation

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  next  objects.inv  pyproject.toml  versions.json
.github/: release-drafter.yml
.github/workflows/: build.yml  ci.yml  docs.yml  publish.yml  release.yml  test.yml
api_reference/atlas/: index.html
api_reference/dataset/: index.html
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/advanced/multiprocessing/: index.html
dev/api_reference/atlas/: index.html
dev/api_reference/dataset/: index.html
dev/getting_started/concepts/: index.html
dev/getting_started/installation/: index.html
dev/getting_started/quickstart/: index.html
dev/getting_started/releases/: index.html
dev/search/: search_index.json
dev/usage/basics/: index.html
dev/usage/data_organization/: index.html
docs/: index.md
docs/advanced/: multiprocessing.md
docs/api_reference/: atlas.md  dataset.md
docs/getting_started/: concepts.md  installation.md  quickstart.md  releases.md
docs/usage/: basics.py  data_organization.md  pai_atlas.py
search/: search_index.json
src/soma_curation/: __init__.py  sc_logging.py  schema.py
src/soma_curation/atlas/: crud.py  ingestion_funcs.py
src/soma_curation/collection/: __init__.py  h5ad_collection.py  mtx_collection.py
src/soma_curation/config/: config.py
src/soma_curation/constants/: __init__.py  constants.py  create_dummy_structure.py
src/soma_curation/dataset/: anndataset.py
src/soma_curation/types/: path.py
tests/: test_anndataset.py  test_atlas.py  test_feature_presence.py  test_h5ad_collection.py  test_mtx_collection.py  test_script.py
usage/basics/: index.html
v1.0.0-rc6/: sitemap.xml
v1.0.0-rc7/: 404.html  index.html  sitemap.xml
(+33 files in other folders)
