[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "soma_curation"
dynamic = ["version"]
description = "Curate data for the scTx platform"
authors = [
    { name = "Phenomic AI", email = "sctx@phenomic.ai" }
]
readme = "README.md"
requires-python = ">= 3.9"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "tiledbsoma",
    "fast_matrix_market",
    "pydantic",
    "pyyaml",
    "s3fs[boto3]",
    "cloudpathlib"
]

[tool.setuptools_scm]


[tool.setuptools.package-data]
"soma_curation.constants" = [
  "dummy_core_geneset.tsv.gz"
]

[project.scripts]
pai-soma-curation = "soma_curation.scripts.multiprocessing_ingest:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[project.optional-dependencies]
dev = [
    "pytest",
    "jupyter",
    "jupytext",
    "ipykernel",
    "mkdocs",
    "mkdocstrings",
    "mkdocstrings-python",
    "mkdocs-jupyter",
    "pre-commit"
]

[project.urls]
homepage = "https://phenomic.ai"
repository = "https://github.com/PhenomicAI/soma-curation"

[tool.black]
line-length = 120
target_version = ['py310']

[tool.pytest.ini_options]
pythonpath = [
    "." 
]